# astragate

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  demo_test.py  docker-compose.yml
backend/: .env  Dockerfile  README.md  _dbcheck.py  alembic.ini  astragate.db  check_providers.py  debug_resolve.py  pyproject.toml  set_balance.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  a31aab26bfb3_add_encrypted_api_key.py
backend/app/: __init__.py  config.py  database.py  logging_config.py  main.py  redis_client.py
backend/app/api/: admin.py  auth.py  billing.py  gateway.py  keys.py  usage.py
backend/app/middleware/: __init__.py  auth.py  rate_limit.py  virtual_key_auth.py
backend/app/models/: __init__.py  base.py  credit.py  guardrail.py  model.py  provider.py  usage.py  user.py  virtual_key.py
backend/app/scripts/: create_admin.py  seed.py  setup_dev_db.py
backend/app/services/: __init__.py  admin_markup.py  credit.py  email.py  encryption.py  guardrail.py  litellm_client.py  markup.py  post_process.py  provider_balance.py  virtual_key.py
backend/tests/: conftest.py  load_test.js  load_test_500.js  test_admin_markup.py  test_e2e_integration.py  test_gateway_router.py  test_guardrail_service.py  test_litellm_client.py  test_markup_service.py  test_post_process.py  test_provider_balance.py  test_rate_limit.py  test_virtual_key_auth.py  test_virtual_key_service.py
deployment/: deployment_guide.md  qc_test_report.md
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  (+1 more)
infra/: README.md
(+94 files in other folders)
