[project]
name = "astragate-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.3",
    "httpx==0.27.2",
    "redis[hiredis]==5.0.8",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.2.0",
    "stripe==10.12.0",
    "resend==2.4.0",
    "pydantic-settings==2.5.2",
    "python-multipart==0.0.12",
    "structlog==24.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
